--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
     <li><a class="delay active" href="#"><span class="delay glyphicon glyphicon-dashboard"></span> Board</a></li>
     <li><a class="delay" href="/tutorials/index"><span class="delay glyphicon glyphicon-book"></span> Projects</a><span class="alert">6</span></li>
     <li><a class="delay" href="#"><span class="delay glyphicon glyphicon-comment"></span> Contacts</a></li>
-    <li><a class="delay" href="#"><span class="delay glyphicon glyphicon-user"></span> About</a></li>
+    <li><a class="delay" href="/about/index"><span class="delay glyphicon glyphicon-user"></span> About</a></li>
     <li><a class="delay" href="#"><span class="delay glyphicon glyphicon-globe"></span> Social</a></li>
   </ul>
   <ul class="links lower">
