--- a/app/views/others/git.html.erb
+++ b/app/views/others/git.html.erb
@@ -1,4 +1,4 @@
-<article class="container">
+<article>
 <h1>
   Git desde Cero
 </h1>
@@ -21,7 +21,7 @@
   razón alguna por la cual Git no pueda ser usado por otras personas para otros ámbitos (diseño, arquitectura, qué se
   yo) en proyectos que requieran trabajar con más de una versión de un archivo y varias modificaciones. Dicho esto,
   aprendamos Git pues:
-</div>
+
 
 <br/>
 
