--- a/app/views/others/iror.html.erb
+++ b/app/views/others/iror.html.erb
@@ -1,4 +1,4 @@
-<article class="container">
+<article>
   <div class="span10">
     <h1 id='setup_recipe_for_rails_girls'>Guia de instalación de ruby on rails</h1>
     <span class='muted'>ref:rails</span>
