--- a/app/views/ruby/bloquesyprocesos.html.erb
+++ b/app/views/ruby/bloquesyprocesos.html.erb
@@ -1,5 +1,5 @@
 <div id="readme" class="blob instapaper_body">
-<article class="container" itemprop="mainContentOfPage"><h1>
+<article itemprop="mainContentOfPage"><h1>
   <a name="bloques-y-procedimientos" class="anchor" href="#bloques-y-procedimientos"><span class="mini-icon mini-icon-link"></span></a>Bloques
   y Procedimientos</h1>
 
