--- a/app/views/ruby/clases.html.erb
+++ b/app/views/ruby/clases.html.erb
@@ -1,5 +1,5 @@
 <div id="readme" class="blob instapaper_body">
-<article class="container" itemprop="mainContentOfPage"><h1>
+<article itemprop="mainContentOfPage"><h1>
   <a name="clases" class="anchor" href="#clases"><span class="mini-icon mini-icon-link"></span></a>Clases</h1>
 
 <p>Hasta ahora hemos visto diferentes tipos o <em>clases</em> de objetos:
