--- a/app/views/ruby/controldeflujo.html.erb
+++ b/app/views/ruby/controldeflujo.html.erb
@@ -1,5 +1,5 @@
 <div id="readme" class="blob instapaper_body">
-<article class="container" itemprop="mainContentOfPage"><h1>
+<article itemprop="mainContentOfPage"><h1>
   <a name="control-de-flujo" class="anchor" href="#control-de-flujo"><span class="mini-icon mini-icon-link"></span></a>Control
   de Flujo</h1>
 
@@ -456,7 +456,7 @@
   DESDE 1938!</code>. Para hacer el programa <em>realmente</em> creíble, haz que la abuela grite un año
   distinto cada vez; tal vez un año aleatorio entre 1930 y 1950. (Esta parte es opcional y sería mucho
   más facil si lees la sección sobre generadores de números aleatorios de Ruby al final del capítulo
-  <%= link_to "métodos", :controller => :tut:rubyction => :metodos %>) No podrás dejar de
+  <%= link_to "métodos", :controller => :ruby, :action => :metodos %>) No podrás dejar de
   hablar con la abuela hasta que le grites <code>ADIOS</code>.<br><em><strong>Pista:</strong> ¡No te olvides que
 </em><code>chomp</code><em>! ¡</em><code>'ADIOS'</code><em>con un Enter
   no es lo mismo que </em><code>'ADIOS'</code><em> sin uno!</em><br>. <em><strong>Pista 2:</strong> Trata de pensar
@@ -482,6 +482,6 @@
   que antes cuando no tenías bucles y ramificaciones.</p>
 
 <p>Ahora, aprendamos sobre un nuevo tipo de objeto, que permite tener control de listas de otros objetos:
-  <%= link_to "matrices", :controller => :tutorial, :action => :matrices %>.</p></article>
+  <%= link_to "matrices", :controller => :ruby, :action => :matrices %>.</p></article>
 </div>
 <br><br><br><br><br><br><br><br>
