--- a/app/views/ruby/conversiones.html.erb
+++ b/app/views/ruby/conversiones.html.erb
@@ -1,10 +1,10 @@
 <div id="readme" class="blob instapaper_body">
-<article class="container" itemprop="mainContentOfPage"><h1>
+<article itemprop="mainContentOfPage"><h1>
   <a name="mezclando" class="anchor" href="#mezclando"><span class="mini-icon mini-icon-link"></span></a>Mezclando</h1>
 
 <p>Hemos revisado distintos tipos de objetos (<%= link_to "números", :controller => :ruby, :action => :numeros %>
-  y <%= link_to "texto", :controller => :ruby, action => :textos %>)
-  y hemos hecho que <%= link_to "variables", :controller => :tutorial, :ruby => :variables %>
+  y <%= link_to "texto", :controller => :ruby, :action => :textos %>)
+  y hemos hecho que <%= link_to "variables", :controller => :ruby, :action => :variables %>
   apunten a ellos; lo que queremos hacer después es que funcionen todos juntos.</p>
 
 <p>Hemos visto que si queremos que un programa imprima <code>25</code>, lo que sigue <strong><em>no</em></strong>
@@ -237,6 +237,6 @@
 </ul>
 <p>Una vez que hayas terminado los dos programas (y otros que hayas
   intentado), tratemos de aprender más (y más sobre)
-  <%= link_to "¡métodos!", :controller => :tutorial, :action => :metodos %>.</p></article>
+  <%= link_to "¡métodos!", :controller => :ruby, :action => :metodos %>.</p></article>
 </div>
 <br><br><br><br><br><br><br><br>
