--- a/app/views/ruby/matrices.html.erb
+++ b/app/views/ruby/matrices.html.erb
@@ -1,5 +1,5 @@
 <div id="readme" class="blob instapaper_body">
-<article class="container" itemprop="mainContentOfPage"><h1>
+<article itemprop="mainContentOfPage"><h1>
   <a name="matrices-e-iteraciones" class="anchor" href="#matrices-e-iteraciones"><span class="mini-icon mini-icon-link"></span></a>Matrices
   e Iteraciones</h1>
 
