--- a/app/views/ruby/metodos.html.erb
+++ b/app/views/ruby/metodos.html.erb
@@ -1,5 +1,5 @@
 <div id="readme" class="blob instapaper_body">
-<article class="container" itemprop="mainContentOfPage"><h1>
+<article itemprop="mainContentOfPage"><h1>
   <a name="m%C3%A1s-acerca-de-m%C3%A9todos" class="anchor" href="#m%C3%A1s-acerca-de-m%C3%A9todos"><span class="mini-icon mini-icon-link"></span></a>Más
   acerca de Métodos</h1>
 
@@ -519,7 +519,7 @@
   flotantes están <em>realmente cerca</em> de ser la respuesta
   correcta.</p>
 
-<p>Entonces ahora vamos a ver <%= link_to "control de flujo", :controller => :tutorial, :action => :controldeflujo %>
+<p>Entonces ahora vamos a ver <%= link_to "control de flujo", :controller => :ruby, :action => :controldeflujo %>
   .</p></article>
 </div>
 <br><br><br><br><br><br><br><br>
