--- a/app/views/ruby/metodospropios.html.erb
+++ b/app/views/ruby/metodospropios.html.erb
@@ -1,5 +1,5 @@
 <div id="readme" class="blob instapaper_body">
-<article class="container" itemprop="mainContentOfPage"><h1>
+<article  itemprop="mainContentOfPage"><h1>
   <a name="m%C3%A9todos-propios" class="anchor" href="#m%C3%A9todos-propios"><span class="mini-icon mini-icon-link"></span></a>Métodos
   Propios</h1>
 
