--- a/app/views/ruby/numeros.html.erb
+++ b/app/views/ruby/numeros.html.erb
@@ -1,5 +1,5 @@
 <div id="readme" class="blob instapaper_body">
-  <article class="container" itemprop="mainContentOfPage"><h1>
+  <article itemprop="mainContentOfPage"><h1>
     <a name="n%C3%BAmeros" class="anchor" href="#n%C3%BAmeros"><span class="mini-icon mini-icon-link"></span></a>Números
   </h1>
 
