--- a/app/views/ruby/textos.html.erb
+++ b/app/views/ruby/textos.html.erb
@@ -1,5 +1,5 @@
 <div id="readme" class="blob instapaper_body">
-<article class="container" itemprop="mainContentOfPage"><h1>
+<article itemprop="mainContentOfPage"><h1>
   <a name="textos" class="anchor" href="#textos"><span class="mini-icon mini-icon-link"></span></a>Textos</h1>
 
 <p>Así que hemos aprendido todo acerca de
