--- a/app/views/tutorials/index.html.erb
+++ b/app/views/tutorials/index.html.erb
@@ -1,12 +1,17 @@
 <h1>Tutorials#Ruby on Rails (RoR) </h1>
 <p>
-  <%= link_to "instalación ", :controller=> :others , :action=> :iror %> <%= link_to "Primera aplicación", :controller=> :others , :action=> :sieapp %>
-  <%= link_to "Ruby", :controller=> :ruby , :action=> :inicio %>
-  <%= link_to "Github con RoR", :controller => :others, :action => "git" %>
+<ul>
+  <li><%= link_to "instalación ", :controller=> :others , :action=> :iror %> </li>
+  <li><%= link_to "Primera aplicación", :controller=> :others , :action=> :sieapp %></li>
+  <li><%= link_to "Ruby", :controller=> :ruby , :action=> :inicio %></li>
+  <li><%= link_to "Github con RoR", :controller => :others, :action => "git" %></li>
+</ul>
 </p>
+<br>
 <h1>Others#Lenguajes de programación </h1>
 <p>
-  <%=  link_to "php(codeigniter)", :controller=>:others, :action=>"phpcodeigniter" %>
-  <%=  link_to "android(curso audio visual)", :controller=>:others, :action=>"and" %>
-
+<ul>
+  <li><%= link_to "php(codeigniter)", :controller=>:others, :action=>"phpcodeigniter" %></li>
+  <li><%= link_to "android(curso audio visual)", :controller=>:others, :action=>"and" %></li>
+</ul>
 </p>
