--- a/app/views/others/and.html.erb
+++ b/app/views/others/and.html.erb
@@ -1,4 +1,4 @@
-<article class="container">
+<article >
   <div class="span10">
     <h1 id='rails_and_app_tutorial'> Programacion Dispositivos</h1> <b>
 
