--- a/app/views/ruby/inicio.html.erb
+++ b/app/views/ruby/inicio.html.erb
@@ -1,5 +1,5 @@
 <div id="readme" class="blob instapaper_body">
-  <article class="container" itemprop="mainContentOfPage"><h1>
+  <article itemprop="mainContentOfPage"><h1>
     <a name="inicio" class="anchor" href="#inicio"><span class="mini-icon mini-icon-link"></span></a>Inicio</h1>
 
     <p>Cuando programas una computadora, necesitas "hablar" en la forma que tu
