--- a/app/views/ruby/variables.html.erb
+++ b/app/views/ruby/variables.html.erb
@@ -1,5 +1,5 @@
 <div id="readme" class="blob instapaper_body">
-  <article class="container" itemprop="mainContentOfPage"><h1>
+  <article itemprop="mainContentOfPage"><h1>
     <a name="variables" class="anchor" href="#variables"><span class="mini-icon mini-icon-link"></span></a>Variables
   </h1>
 
