--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,11 +16,13 @@
 <nav id="icononav">
 
   <ul class="links">
-    <li><a class="delay active" href="#"><span class="delay glyphicon glyphicon-dashboard"></span> Board</a></li>
-    <li><a class="delay" href="/tutorials/index"><span class="delay glyphicon glyphicon-book"></span> Projects</a><span class="alert">6</span></li>
+    <li><a class="delay active" href="/blog/index"><span class="delay glyphicon glyphicon-dashboard"></span> Blog</a>
+    </li>
+    <li><a class="delay" href="/tutorials/index"><span class="delay glyphicon glyphicon-book"></span>
+      Projects</a><span class="alert">6</span></li>
     <li><a class="delay" href="#"><span class="delay glyphicon glyphicon-comment"></span> Contacts</a></li>
     <li><a class="delay" href="/about/index"><span class="delay glyphicon glyphicon-user"></span> About</a></li>
-    <li><a class="delay" href="#"><span class="delay glyphicon glyphicon-globe"></span> Social</a></li>
+    <!--<li><a class="delay" href="#"><span class="delay glyphicon glyphicon-globe"></span> Social</a></li>-->
   </ul>
   <ul class="links lower">
     <li><a class="" href="/"><span>Iverlandth</span></a></li>
@@ -28,10 +30,6 @@
 
 </nav>
 
-<p id="notice"><%= notice %></p>
-<% flash.each do |name, msg| %>
-    <%= content_tag :div, msg, :id => "flash_#{name}" %>
-<% end %>
 <div class="container">
   <%= yield %>
 </div>
