--- a/app/views/others/sieapp.html.erb
+++ b/app/views/others/sieapp.html.erb
@@ -4,7 +4,7 @@
 
 
 <p><strong>Asegúrese de que ha instalado rails.</strong>
-  <a href='/main/iror'><strong>Siga la guía de instalación</strong></a> para ponerse en marcha..</p>
+  <a href='/others/iror'><strong>Siga la guía de instalación</strong></a> para ponerse en marcha..</p>
 
 <h2 id='step_0_get_to_know_the_tools'>Paso 0: Conocer las herramientas</h2>
 
