--- a/app/views/ruby/textos.html.erb
+++ b/app/views/ruby/textos.html.erb
@@ -26,7 +26,8 @@
 
 <p><em>Código:</em></p>
 
-<pre><code>puts 'Hola, mundo!'
+<pre><code>
+  puts 'Hola, mundo!'
   puts ''
   puts 'Adiós.'
 </code></pre>
@@ -66,7 +67,8 @@
 
 <p><em>Código:</em></p>
 
-<pre><code>puts 'Me gusta ' + 'el pastel de manzana.'
+<pre><code>
+  puts 'Me gusta ' + 'el pastel de manzana.'
   puts 'Me gusta' + ' el pastel de manzana.'
 </code></pre>
 
@@ -113,14 +115,16 @@
 
 <p><em>Código:</em></p>
 
-<pre><code>puts 12 + 12
+<pre><code>
+  puts 12 + 12
   puts '12' + '12'
   puts '12 + 12'
 </code></pre>
 
 <p><em>Resultado:</em></p>
 
-<pre><code>24
+<pre><code>
+  24
   1212
   12 + 12
 </code></pre>
@@ -129,14 +133,16 @@
 
 <p><em>Código:</em></p>
 
-<pre><code>puts 2 * 5
+<pre><code>
+  puts 2 * 5
   puts '2' * 5
   puts '2 * 5'
 </code></pre>
 
 <p><em>Resultado:</em></p>
 
-<pre><code>10
+<pre><code>
+  10
   22222
   2 * 5
 </code></pre>
@@ -152,7 +158,8 @@
 
 <p><em>Código:</em></p>
 
-<pre><code>puts '12' + 12
+<pre><code>
+  puts '12' + 12
   puts '2' * '5'
 </code></pre>
 
@@ -165,7 +172,8 @@
   no puedes sumar un número a un texto, o multiplicar
   un texto por otro texto. No tiene más sentido que esto:</p>
 
-<pre><code>puts 'Betty' + 12
+<pre><code>
+  puts 'Betty' + 12
   puts 'Fred' * 'John'
 </code></pre>
 
@@ -201,7 +209,8 @@
 
 <p><em>Código:</em></p>
 
-<pre><code>puts '¡Mi nombre es O\'hara!'
+<pre><code>
+  puts '¡Mi nombre es O\'hara!'
   puts 'barra invertida al final del texto: \\'
   puts 'arriba\\abajo'
   puts 'arriba\abajo'
@@ -209,7 +218,8 @@
 
 <p><em>Resultado:</em></p>
 
-<pre><code>¡Mi nombre es O'hara!
+<pre><code>
+  ¡Mi nombre es O'hara!
   barra invertida al final del texto: \
   arriba\abajo
   arriba\abajo
@@ -223,4 +233,3 @@
 <p>Si tienes alguna pregunta, solo <%= link_to "¡sigue leyendo!", :controller => :ruby, :action => "variables" %>
   No podría contestar cada pregunta en <em>esta</em> página, después de todo.</p></article>
 </div>
-<br><br><br><br><br><br><br><br>
