--- a/app/views/ruby/variables.html.erb
+++ b/app/views/ruby/variables.html.erb
@@ -9,13 +9,15 @@
 
     <p><em>Código:</em></p>
 
-<pre><code>puts '...puedes decir eso de nuevo...'
+<pre><code>
+  puts '...puedes decir eso de nuevo...'
   puts '...puedes decir eso de nuevo...'
 </code></pre>
 
     <p><em>Resultado:</em></p>
 
-<pre><code>...puedes decir eso de nuevo...
+<pre><code>
+  ...puedes decir eso de nuevo...
   ...puedes decir eso de nuevo...
 </code></pre>
 
@@ -33,7 +35,8 @@
 
     <p><em>Código:</em></p>
 
-<pre><code>myString = '...puedes decir eso de nuevo...'
+<pre><code>
+  myString = '...puedes decir eso de nuevo...'
   puts myString
   puts myString
 </code></pre>
@@ -51,7 +54,8 @@
 
     <p><em>Código:</em></p>
 
-<pre><code>name = 'Patricia Rosanna Jessica Mildred Oppenheimer'
+<pre><code>
+  name = 'Patricia Rosanna Jessica Mildred Oppenheimer'
   puts 'Me llamo ' + name + '.'
   puts 'Wow! "' + name + '" es un nombre realmente largo!'
 </code></pre>
@@ -68,7 +72,8 @@
 
     <p><em>Código:</em></p>
 
-<pre><code>composer = 'Mozart'
+<pre><code>
+  composer = 'Mozart'
   puts composer + ' fue "el amo", en su día.'
 
   composer = 'Beethoven'
@@ -86,7 +91,8 @@
 
     <p><em>Código:</em></p>
 
-<pre><code>var = 'solo otro ' + 'texto'
+<pre><code>
+  var = 'solo otro ' + 'texto'
   puts var
 
   var = 5 * (1+2)
@@ -104,7 +110,8 @@
 
     <p><em>Código:</em></p>
 
-<pre><code>var1 = 8
+<pre><code>
+  var1 = 8
   var2 = var1
   puts var1
   puts var2
@@ -118,7 +125,8 @@
 
     <p><em>Resultado:</em></p>
 
-<pre><code>8
+<pre><code>
+  8
   8
 
   ocho
@@ -134,4 +142,3 @@
       Ahora que tenemos variables, números y textos, vamos a ver
       como <%= link_to "mezclarlos", :controller => :ruby, :action => :conversiones %>.</p></article>
 </div>
-<br><br><br><br><br><br><br><br>
