--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
     </li>
     <li><a class="delay" href="/tutorials/index"><span class="delay glyphicon glyphicon-book"></span>
       Projects</a><span class="alert">6</span></li>
-    <li><a class="delay" href="#"><span class="delay glyphicon glyphicon-comment"></span> Contacts</a></li>
+    <li><a class="delay" href="/contacts/new"><span class="delay glyphicon glyphicon-comment"></span> Contacts</a></li>
     <li><a class="delay" href="/about/index"><span class="delay glyphicon glyphicon-user"></span> About</a></li>
     <!--<li><a class="delay" href="#"><span class="delay glyphicon glyphicon-globe"></span> Social</a></li>-->
   </ul>
