--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,12 +16,19 @@
 <nav id="icononav">
 
   <ul class="links">
-    <li><a class="delay active" href="/blog/index"><span class="delay glyphicon glyphicon-dashboard"></span> Blog</a>
+    <li>
+      <a class="delay <%= 'active' if controller_name == "blog" %>" href="/blog/index"><span class="delay glyphicon glyphicon-dashboard"></span> Blog</a>
     </li>
-    <li><a class="delay" href="/tutorials/index"><span class="delay glyphicon glyphicon-book"></span>
-      Projects</a><span class="alert">6</span></li>
-    <li><a class="delay" href="/contacts/new"><span class="delay glyphicon glyphicon-comment"></span> Contacts</a></li>
-    <li><a class="delay" href="/about/index"><span class="delay glyphicon glyphicon-user"></span> About</a></li>
+    <li>
+      <a class="delay <%= 'active' if controller_name =~ /tutorials|ruby|others/ %>" href="/tutorials/index"><span class="delay glyphicon glyphicon-book"></span>Projects</a>
+      <span class="alert badge">6</span>
+    </li>
+    <li>
+      <a class="delay <%= 'active' if controller_name == "contacts" %>" href="/contacts/new"><span class="delay glyphicon glyphicon-comment"></span> Contacts</a>
+    </li>
+    <li>
+      <a class="delay <%= 'active' if controller_name == "about" %>" href="/about/index"><span class="delay glyphicon glyphicon-user"></span> About</a>
+    </li>
     <!--<li><a class="delay" href="#"><span class="delay glyphicon glyphicon-globe"></span> Social</a></li>-->
   </ul>
   <ul class="links lower">
