--- a/app/views/ruby/numeros.html.erb
+++ b/app/views/ruby/numeros.html.erb
@@ -41,19 +41,20 @@
 
     <p>Aquí hay algunos enteros:</p>
 
-<pre><code>5
-  -205
-  9999999999999999999999999
-  0
-</code></pre>
+<pre>
+  <code>  5
+    -205
+    9999999999999999999999999
+    0 </code></pre>
 
     <p>Y aquí hay algunos flotantes:</p>
 
-<pre><code>54.321
+<pre>
+<code>  54.321
   0.001
   -205.3884
-  0.0
-</code></pre>
+  0.0</code>
+</pre>
 
     <p>En la práctica, la mayoría de los programas no usan flotantes, sólo enteros.
       (Después de todo, nadie quiere leer 7.4 emails, o navegar 1.8 páginas,
@@ -75,7 +76,7 @@
       teclado numérico a la derecha. Intentemos expandir un poco
       nuestro programa <code>calc.rb</code>. Escribe lo siguiente y ejecútalo:</p>
 
-<pre><code>puts 1.0 + 2.0
+<pre><code>  puts 1.0 + 2.0
   puts 2.0 * 3.0
   puts 5.0 - 8.0
   puts 9.0 / 2.0
@@ -83,7 +84,7 @@
 
     <p>Esto es lo que retorna el programa:</p>
 
-<pre><code>3.0
+<pre><code>  3.0
   6.0
   -3.0
   4.5
@@ -93,7 +94,7 @@
       hacen que el código sea más fácil de leer). Bueno, eso no
       fue muy sorprendente. Ahora probemos con enteros:</p>
 
-<pre><code>puts 1+2
+<pre><code>  puts 1+2
   puts 2*3
   puts 5-8
   puts 9/2
@@ -101,7 +102,7 @@
 
     <p>Básicamente lo misno, ¿no?</p>
 
-<pre><code>3
+<pre><code>  3
   6
   -3
   4
@@ -128,13 +129,13 @@
 
     <p><em>Código:</em></p>
 
-<pre><code>puts 5 * (12-8) + -15
+<pre><code>  puts 5 * (12-8) + -15
   puts 98 + (59872 / (13*8)) * -52
 </code></pre>
 
     <p><em>Resultado:</em></p>
 
-<pre><code>5
+<pre><code>  5
   -29802
 </code></pre>
 
