--- a/app/views/ruby/textos.html.erb
+++ b/app/views/ruby/textos.html.erb
@@ -10,7 +10,7 @@
   pensar en letras impresas siendo ensartadas en un cartel.)
   Aquí hay algunos textos:</p>
 
-<pre><code>'Hola.'
+<pre><code>  'Hola.'
   'Ruby la rompe.'
   '5 es mi número favorito... ¿Cuál es el tuyo?'
   'Snoopy dice #%^?&amp;*@! cuando le aplastan el dedo del pie.'
@@ -26,15 +26,14 @@
 
 <p><em>Código:</em></p>
 
-<pre><code>
-  puts 'Hola, mundo!'
+<pre><code>  puts 'Hola, mundo!'
   puts ''
   puts 'Adiós.'
 </code></pre>
 
 <p><em>Resultado:</em></p>
 
-<pre><code>Hola Mundo
+<pre><code>  Hola Mundo
 
   Adiós
 </code></pre>
@@ -67,14 +66,13 @@
 
 <p><em>Código:</em></p>
 
-<pre><code>
-  puts 'Me gusta ' + 'el pastel de manzana.'
+<pre><code>  puts 'Me gusta ' + 'el pastel de manzana.'
   puts 'Me gusta' + ' el pastel de manzana.'
 </code></pre>
 
 <p><em>Resultado:</em></p>
 
-<pre><code>Me gusta el pastel de manzana
+<pre><code>  Me gusta el pastel de manzana
   Me gusta el pastel de manzana
 </code></pre>
 
@@ -115,16 +113,14 @@
 
 <p><em>Código:</em></p>
 
-<pre><code>
-  puts 12 + 12
+<pre><code>  puts 12 + 12
   puts '12' + '12'
   puts '12 + 12'
 </code></pre>
 
 <p><em>Resultado:</em></p>
 
-<pre><code>
-  24
+<pre><code>  24
   1212
   12 + 12
 </code></pre>
@@ -133,16 +129,14 @@
 
 <p><em>Código:</em></p>
 
-<pre><code>
-  puts 2 * 5
+<pre><code>  puts 2 * 5
   puts '2' * 5
   puts '2 * 5'
 </code></pre>
 
 <p><em>Resultado:</em></p>
 
-<pre><code>
-  10
+<pre><code>  10
   22222
   2 * 5
 </code></pre>
@@ -158,8 +152,7 @@
 
 <p><em>Código:</em></p>
 
-<pre><code>
-  puts '12' + 12
+<pre><code>  puts '12' + 12
   puts '2' * '5'
 </code></pre>
 
@@ -172,8 +165,7 @@
   no puedes sumar un número a un texto, o multiplicar
   un texto por otro texto. No tiene más sentido que esto:</p>
 
-<pre><code>
-  puts 'Betty' + 12
+<pre><code>  puts 'Betty' + 12
   puts 'Fred' * 'John'
 </code></pre>
 
@@ -209,8 +201,7 @@
 
 <p><em>Código:</em></p>
 
-<pre><code>
-  puts '¡Mi nombre es O\'hara!'
+<pre><code>  puts '¡Mi nombre es O\'hara!'
   puts 'barra invertida al final del texto: \\'
   puts 'arriba\\abajo'
   puts 'arriba\abajo'
@@ -218,8 +209,7 @@
 
 <p><em>Resultado:</em></p>
 
-<pre><code>
-  ¡Mi nombre es O'hara!
+<pre><code>  ¡Mi nombre es O'hara!
   barra invertida al final del texto: \
   arriba\abajo
   arriba\abajo
