--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,38 +1,47 @@
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1" class=""></li>
-    <li data-target="#myCarousel" data-slide-to="2" class=""></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="item active">
+<div class="row">
+  <div class="col-md-6"><div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1" class=""></li>
+      <li data-target="#myCarousel" data-slide-to="2" class=""></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="item active">
 
-      <%= image_tag 'bg/bg-archea.jpg' %>
-      <div class="container">
-        <div class="carousel-caption">
+        <%= image_tag 'bg/bg-archea.jpg' %>
+        <div class="container">
+          <div class="carousel-caption">
 
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <%= image_tag 'bg/bg-segno.jpg' %>
+        <div class="container">
+          <div class="carousel-caption">
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <%= image_tag 'bg/bg-goodssolutions.jpg' %>
+        <div class="container">
+          <div class="carousel-caption">
+
+          </div>
         </div>
       </div>
     </div>
-    <div class="item">
-      <%= image_tag 'bg/bg-segno.jpg' %>
-      <div class="container">
-        <div class="carousel-caption">
-        </div>
-      </div>
-    </div>
-    <div class="item">
-      <%= image_tag 'bg/bg-goodssolutions.jpg' %>
-      <div class="container">
-        <div class="carousel-caption">
-
-        </div>
-      </div>
-    </div>
+  </div></div>
+  <div class="col-md-6">
+    <a class="twitter-timeline" href="https://twitter.com/iverlandth" data-widget-id="493019055545008128">Tweets por @iverlandth</a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
   </div>
+
 </div>
+
 <hr>
+
 <footer class="content-info" role="contentinfo">
 
     <div class="row">
