--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,4 +28,10 @@ body {
     /*background: radial-gradient(ellipse at center,  rgba(76,69,76,1) 1%,rgba(50,43,50,1) 50%,rgba(20,10,18,1) 100%); *//* W3C */
     /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c454c', endColorstr='#140a12',GradientType=1 ); *//* IE6-9 fallback on horizontal gradient */
 }
-
+a {
+    color: #08ba90;
+}
+a:hover{
+    color: #047f61;
+    text-decoration: none;
+}
