--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,6 +17,8 @@
 
 body {
     padding-bottom: 60px;
+    background: none repeat scroll 0% 0% rgba(239, 242, 246, 0.8);
+
     /*color: #ffffff;*/
     /*background-color: #f4f4f4;*/
     /*background: rgb(76,69,76); *//* Old browsers */
